--- a/Planet_Amazon_challenge_Learning_rate_optimization.ipynb
+++ b/Planet_Amazon_challenge_Learning_rate_optimization.ipynb
@@ -302,7 +302,11 @@
         "\n",
         "Sections and code are ordered in a way that should be easy to follow, if you have doubts or comments please do not hesitate in reaching me by opening an issue in my ml-journey repository: https://github.com/lddm/ml-journey  \n",
         "\n",
-        "I use this notebook for both training and applying the classifier for the challenge. The latest state of the notebook in github may not have all cells' outputs. If you have doubts about some output you can always try running the notebook end-to-end on your own or ask me, I would be happy to help."
+        "I use this notebook for both training and applying the classifier for the challenge. The latest state of the notebook in github may not have all cells' outputs. If you have doubts about some output you can always try running the notebook end-to-end on your own or ask me, I would be happy to help.\n",
+        "\n",
+        "With the latest classifier trained in this notebook a score of `0.89188` was obtained, the top score in the challenge leaderboard is `0.93317`. Although the score is not yet at the same level as the top scores, I believe the obtained classifier is sufficiently good for the application of forest monitoring I plan to work on next. I may get back to work on improving this classifier in the future, in that case, I believe the following points are worth reviewing:\n",
+        "* The neural network may be overfitting the training data and may benefit from including a weight-decay in the loss while training.\n",
+        "* I'm using Colab free infrastructure for training and classification. Currently training is somewhat limited by the interaction of GPU speed and memory and the timeout Google set when using the Colab free environment. There's some potential benefit of using TPUs instead. To the best of my knowledge, the easiest way to make the switch would be to move from using PyTorch to Pytorch-Lighting. PyTorch-Lighting provides a lot of extra benefits and was recommended by several colleagues and friends, I definitely want to try it out in the future"
       ]
     },
     {
@@ -365,7 +369,7 @@
         "plt.ion()   # interactive mode\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +385,7 @@
         "drive.mount('/content/gdrive')\n",
         "os.chdir(ROOT_PATH)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +420,7 @@
         "# !tar -xvf  'train-jpg.tar' -C 'train'\n",
         "# !tar -xvf  'test-jpg-all-images.tar.gz' -C 'test'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +515,7 @@
         "        tuple_with_path = (original_tuple + (img_name,))\n",
         "        return tuple_with_path"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -834,7 +838,7 @@
         "train_img = cv2.imread(train_img_path)\n",
         "train_img.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +965,7 @@
         "    def __len__(self):\n",
         "        return len(self.X_train.index)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1021,7 +1025,7 @@
         "dataset_sizes = {'train': len(dataset_train),\n",
         "                 'val': len(dataset_valid)}"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1040,7 @@
       "source": [
         "dataset_sizes"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1603,7 +1607,7 @@
         "last_epoch = checkpoint['epoch']\n",
         "epoch_loss_evolution = checkpoint['loss_evolution']"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1667,7 +1671,7 @@
         "dataset_test = ImageFolderWithPaths('test', test_transforms)\n",
         "dataloader = {'test': torch.utils.data.DataLoader(dataset_test, batch_size = 250, shuffle=False, num_workers=2)}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1690,7 +1694,7 @@
       "source": [
         "print(len(dataloader['test'].dataset)) \n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1739,7 +1743,7 @@
         "    model.train(mode=was_training)\n",
         "    return results_df"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1755,7 +1759,7 @@
         "results_df = classify(model, dataloader['test'], dataset.mlb, show_images=False, threshold=0.2)\n",
         "results_df.to_csv(SUBMISSION_FILENAME, index=False)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1785,7 +1789,7 @@
       "source": [
         "results_df = pd.read_csv(SUBMISSION_FILENAME)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1801,7 +1805,7 @@
       "source": [
         "results_df"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1926,7 +1930,7 @@
       "source": [
         "!pip install kaggle"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1983,7 +1987,7 @@
         "# Then move kaggle.json into the folder where the API expects to find it.\n",
         "!mkdir -p ~/.kaggle/ && mv kaggle.json ~/.kaggle/ && chmod 600 ~/.kaggle/kaggle.json"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2029,7 +2033,7 @@
         "print(SUBMISSION_FILENAME)\n",
         "! kaggle competitions submit -c planet-understanding-the-amazon-from-space -f submission_one_cycle_lr_data_augmentation.csv -m \"Third iteration results using transfer learning with a ResNet50 trained in ImageNet and One Cycle policy, using data augmentation\"\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
